Test_Files/abstract_vm/Error/overflow3.asm
;     Overflow 3
;   ==============
;   Error test 14

; big
push int8(-9999)
; very big
push int16(9999999999)
; thicc
push int32(999999999999999999999999999999999999999999999999)
; very thicc
push float(-99999999999999999999999999999999999999999999999999999999999999999999.9)
; EXTRA T H I C C
push double(-9999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999.9)
dump
exit
